--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/chenfengjw163/vue-json-viewer#readme",
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "clipboard": "^1.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -35,7 +36,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "clipboard": "^1.7.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-plugin-html": "^4.0.0-alpha.1",
