--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-json-viewer",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "vuejs展示json的组件",
   "main": "dist/vue-json-viewer.js",
   "files": [
-    "lib/*"
+    "dist/*"
   ],
   "directories": {
     "lib": "./lib",
