--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "2.2.19",
   "description": "vuejs展示json的组件",
   "main": "vue-json-viewer.js",
-  "files": [
-    "vue-json-viewer.js",
-    "ssr.js",
-    "style.css"
-  ],
+  "files": ["vue-json-viewer.js", "ssr.js", "style.css"],
   "directories": {
     "lib": "./lib",
     "example": "./example"
@@ -22,10 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/chenfengjw163/vue-json-viewer.git"
   },
-  "keywords": [
-    "vue",
-    "json"
-  ],
+  "keywords": ["vue", "json"],
   "homepage": "https://github.com/chenfengjw163/vue-json-viewer#readme",
   "author": {
     "name": "陈峰",
@@ -46,8 +39,7 @@
     }
   ],
   "dependencies": {
-    "clipboard": "^2.0.4",
-    "vue": "^2.6.9"
+    "clipboard": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -73,6 +65,7 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^0.6.2",
+    "vue": "^2.6.9",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.9",
@@ -81,5 +74,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.1.0"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.9"
   }
 }
