--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     }
   ],
   "dependencies": {
-    "clipboard": "^2.0.4",
-    "vue": "^2.6.9"
+    "clipboard": "^2.0.4"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.2",
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
@@ -73,9 +73,9 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^0.6.2",
-    "vue-loader": "^15.7.0",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.9",
+    "vue": "^3.2.2",
+    "vue-loader": "^16.5.0",
+    "vue-style-loader": "^4.1.3",
     "webpack": "=4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.11",
