--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "vue-json-viewer",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "vuejs展示json的组件",
   "main": "vue-json-viewer.js",
-  "files": ["vue-json-viewer.js", "ssr.js", "style.css"],
+  "files": [
+    "vue-json-viewer.js",
+    "ssr.js",
+    "style.css"
+  ],
   "directories": {
     "lib": "./lib",
     "example": "./example"
@@ -18,7 +22,10 @@
     "type": "git",
     "url": "git+https://github.com/chenfengjw163/vue-json-viewer.git"
   },
-  "keywords": ["vue", "json"],
+  "keywords": [
+    "vue",
+    "json"
+  ],
   "homepage": "https://github.com/chenfengjw163/vue-json-viewer#readme",
   "author": {
     "name": "陈峰",
@@ -78,5 +85,8 @@
   },
   "peerDependencies": {
     "vue": "^3.2.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
